--- a/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="8.0.0" targetFramework="net481" />
-  <package id="Autofac.WebApi" version="3.1.0" targetFramework="net481" />
+  <package id="Autofac.WebApi2" version="6.1.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
