--- a/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="8.0.0" targetFramework="net481" />
   <package id="Autofac.WebApi2" version="6.1.1" targetFramework="net481" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
