--- a/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.API/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
@@ -14,4 +15,9 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="WebApiDoodle" version="2.0.1" targetFramework="net481" />
+  <package id="WebApiDoodle.Net.Http" version="2.0.1" targetFramework="net481" />
+  <package id="WebApiDoodle.Net.Http.Formatting" version="2.0.1" targetFramework="net481" />
+  <package id="WebApiDoodle.Web" version="2.0.1" targetFramework="net481" />
+  <package id="WebApiDoodle.Web.Meta" version="2.0.1" targetFramework="net481" />
 </packages>
