now repo is binded thru ninject

--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -16,7 +16,7 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="Email.WriteAsFile" value="false"/>
+		<add key="Email.WriteAsFile" value="false" />
 	</appSettings>
 	
 	<system.web>
@@ -88,6 +88,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.3.6.0" newVersion="3.3.6.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
