--- a/SportsStore/SportsStore.WebUI/packages.config
+++ b/SportsStore/SportsStore.WebUI/packages.config
@@ -35,10 +35,12 @@
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.21.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
-  <package id="Moq" version="4.20.71" targetFramework="net481" />
+  <package id="Moq" version="4.20.72" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net481" />
   <package id="Ninject" version="3.3.6" targetFramework="net481" />
+  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net481" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
@@ -46,5 +48,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
