Changes found. CI to remote

--- a/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
+++ b/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AdWConnStr": "Data Source=JEANPC\\DEVSERVER;Initial Catalog=AdventureWorks2022;Integrated Security=True;Encrypt=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
