Changes found. CI to remote

--- a/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
+++ b/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
@@ -1,12 +1,20 @@
 {
-  "ConnectionStrings": {
-    "AdWConnStr": "Data Source=JEANPC\\DEVSERVER;Initial Catalog=AdventureWorks2022;Integrated Security=True;Encrypt=True"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Error",
+        "Microsoft": "Error",
+        "AdventureWorks.ServiceAPI.Controllers": "Information",
+        "AdventureWorks.ServiceAPI.Services": "Trace"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AdWConnStr": "Data Source=JEANPC\\DEVSERVER;Initial Catalog=AdventureWorks2022;Integrated Security=True;Encrypt=True"
+  }
 }
