Changes found. CI to remote

--- a/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
+++ b/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
@@ -11,6 +11,18 @@
         "AdventureWorks.ServiceAPI.Controllers": "Information",
         "AdventureWorks.ServiceAPI.Services": "Trace"
       }
+    },
+    "AdWDataLogs": {
+      "Options": {
+        "FolderPath": "D:\\_workspace\\_devtrunk\\Logs",
+        "FileName": "Log_{date}"
+      },
+      "LogLevel": {
+        "Default": "Error",
+        "Microsoft": "Error",
+        "AdventureWorks.ServiceAPI.Controllers": "Information",
+        "AdventureWorks.ServiceAPI.Services": "Information"
+      }
     }
   },
   "AllowedHosts": "*",
