--- a/DemoExercises/DemoLibrary_4.8/DemoLibrary_4.8.csproj
+++ b/DemoExercises/DemoLibrary_4.8/DemoLibrary_4.8.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1AA84D54-0996-47EF-917B-B2B33D9C97CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DemoLibrary_4._8</RootNamespace>
-    <AssemblyName>DemoLibrary_4.8</AssemblyName>
+    <RootNamespace>DemoLibrary48</RootNamespace>
+    <AssemblyName>DemoLibrary48</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ApiHelper.cs" />
+    <Compile Include="ComicModel.cs" />
+    <Compile Include="ComicProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
