--- a/DemoExercises/DEP.ServiceApplication/Web.config
+++ b/DemoExercises/DEP.ServiceApplication/Web.config
@@ -1,6 +1,5 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -20,8 +19,8 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
@@ -32,5 +31,4 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-
-<connectionStrings><add name="DEPEntities" connectionString="metadata=res://*/PatientInfo.csdl|res://*/PatientInfo.ssdl|res://*/PatientInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JeanPC\DEVSERVER;initial catalog=DEP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+</configuration>
