work in progress

--- a/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
+++ b/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
@@ -14,7 +14,7 @@
     },
     "AdWDataLogs": {
       "Options": {
-        "FolderPath": "D:\\_workspace\\_devtrunk\\Logs",
+        "FolderPath": "E:\\Workspace\\_devtrunk\\Logs",
         "FileName": "Log_{date}"
       },
       "LogLevel": {
@@ -27,6 +27,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdWConnStr": "Data Source=JEANPC\\DEVSERVER;Initial Catalog=AdventureWorks2022;Integrated Security=True;Encrypt=True"
+    "AdWConnStr": "Data Source=JEANPC-WIN10\\DEVENV;Initial Catalog=AdventureWorks2022;Integrated Security=True;Trust Server Certificate=True"
   }
 }
