GetAll and GetbyId completed

--- a/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
+++ b/AdventureWorks/AdventureWorks.ServiceAPI/appsettings.json
@@ -27,6 +27,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdWConnStr": "Data Source=JEANPC-WIN10\\DEVENV;Initial Catalog=AdventureWorks2022;Integrated Security=True;Trust Server Certificate=True"
+    "AdWConn": "Data Source=JEANPC\\DEVENV;Initial Catalog=AdventureWorks2022;Integrated Security=True;Trust Server Certificate=True"
   }
 }
