--- a/DemoProjectEx/Legacy.Domain/App.Config
+++ b/DemoProjectEx/Legacy.Domain/App.Config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="DemoDBEntities" connectionString="metadata=res://*/DataModelOne.csdl|res://*/DataModelOne.ssdl|res://*/DataModelOne.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JeanPC\DevEnv;initial catalog=DemoDB;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Model1" connectionString="data source=JeanPC\DevEnv;initial catalog=DemoDB;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
