--- a/DemoProjectEx/demo_dotnet_fw4/DPE.Main/packages.config
+++ b/DemoProjectEx/demo_dotnet_fw4/DPE.Main/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
+  <package id="Autofac" version="8.4.0" targetFramework="net481" />
+  <package id="Autofac.Mvc5" version="6.1.0" targetFramework="net481" />
+  <package id="Autofac.WebApi2" version="6.1.1" targetFramework="net481" />
   <package id="bootstrap" version="5.3.7" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net481" />
@@ -19,7 +22,10 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.8" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.32" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.8" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.3" targetFramework="net481" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net481" />
   <package id="Microsoft.Owin.Security" version="4.2.3" targetFramework="net481" />
@@ -36,6 +42,7 @@
   <package id="Owin" version="1.0" targetFramework="net481" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net481" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net481" />
   <package id="System.Memory" version="4.6.3" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net481" />
