--- a/.github/workflows/personal-portfolio.yml
+++ b/.github/workflows/personal-portfolio.yml
@@ -1,22 +1,17 @@
 name: Build and deploy .NET Core application to Web App personal-portfolio
 on:
   pull_request:
-    types:
-    - opened
-    - synchronize
-    - reopened
-    - closed
-    branches:
-    - main
+    types: [opened, synchronize, reopened, closed]
+    branches: [main]
   push:
-    branches:
-    - main
+    branches: [main]
 env:
   AZURE_STATIC_WEBAPP_NAME: personal-portfolio
-  APP_DIRECTORY: portfolio
+  APP_DIRECTORY: portfolio.main
   API_DIRECTORY: ''
   OUTPUT: wwwroot
-  DEPLOYMENT_ENVIRONMENT: preview
+  # For pushes to main, prefer production (or remove this line entirely)
+  DEPLOYMENT_ENVIRONMENT: production
 jobs:
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
@@ -26,6 +21,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
+    - name: Show repo layout (helps diagnose path issues if it fails again)
+      run: |
+        pwd
+        ls -la
+        ls -la portfolio.main || true
     - id: builddeploy
       name: Build And Deploy
       uses: Azure/static-web-apps-deploy@v1
@@ -33,7 +33,7 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.personal_portfolio_SPN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: upload
-        deployment_environment: ${{env.DEPLOYMENT_ENVIRONMENT}}
+        deployment_environment: ${{ env.DEPLOYMENT_ENVIRONMENT }}
         app_location: ${{ env.APP_DIRECTORY }}
         api_location: ${{ env.API_DIRECTORY }}
         output_location: ${{ env.OUTPUT }}
