missed all the models to domain renaming

--- a/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
+++ b/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
@@ -9,6 +9,6 @@
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TimesheetManagement.Models\TimesheetManagement.Domain.csproj" />
+    <ProjectReference Include="..\TimesheetManagement.Domain\TimesheetManagement.Domain.csproj" />
   </ItemGroup>
 </Project>
