domain layer reconstructed to ddd-clean-arch

--- a/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
+++ b/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
@@ -11,4 +11,10 @@
   <ItemGroup>
     <ProjectReference Include="..\TimesheetManagement.Domain\TimesheetManagement.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Mappings\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
